Fixed weird margin on mobile devices.

--- a/style.css
+++ b/style.css
@@ -45,7 +45,9 @@ table {
 *{
 	box-sizing: border-box;
 }
-
+html, body{
+	overflow: hidden;
+}
 body{
 	background: linear-gradient(to top, #79C3C2,#AEB7D7);
 }
@@ -294,9 +296,3 @@ div.art:hover .listen button{
 	}
 
 }
-
-
-
-
-
-
